--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br/>
         <h2>History</h2>
         <button id="clear_button" type="button" >Clear</button>
-        <div id="history"></div>
+        <p id="history"></p>
 
     </body>
     
